force-app/main/default/objects/Candidate_Registration_Form__c/Candidate_Registration_Form__c.object-meta.xml
<CustomObject>
    <description>Candidate Registration Form</description>
    <label>Candidate Registration Form</label>
    <nameField>
        <displayFormat>Form -{00000}</displayFormat>
        <label>Sr. No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Registration Form</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>