force-app/main/default/objects/Candidate_Registration_Form__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First Name</description>
    <inlineHelpText>First Name</inlineHelpText>
    <label>First Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>