force-app/main/default/objects/Candidate_Registration_Form__c/fields/Highest_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Highest_Qualification__c</fullName>
    <description>Highest Qualification</description>
    <inlineHelpText>Highest Qualification</inlineHelpText>
    <label>Highest Qualification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Postgraduate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>