force-app/main/default/objects/Candidate_Registration_Form__c/fields/Marks__c.field-meta.xml
<CustomField>
    <fullName>Marks__c</fullName>
    <description>Marks</description>
    <inlineHelpText>Marks</inlineHelpText>
    <label>Marks</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>