force-app/main/default/objects/Candidate_Registration_Form__c/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <description>Qualification</description>
    <inlineHelpText>Qualification</inlineHelpText>
    <label>Qualification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Highest_Qualification__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>BTech</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>