force-app/main/default/objects/Candidate_Registration_Form__c/fields/Ready_to_locate__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_locate__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Ready to locate</description>
    <inlineHelpText>Ready to locate</inlineHelpText>
    <label>Ready to locate</label>
    <type>Checkbox</type>
</CustomField>