force-app/main/default/objects/Candidate_Registration_Form__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>Skills</description>
    <inlineHelpText>Skills</inlineHelpText>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Qualification__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>AutoCad</fullName>
            </value>
            <value>
                <fullName>Dot.net</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
            <value>
                <fullName>Matlab</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>