force-app/main/default/objects/Candidate_Registration_Form__c/fields/Total_Marks__c.field-meta.xml
<CustomField>
    <fullName>Total_Marks__c</fullName>
    <description>Total Marks</description>
    <inlineHelpText>Total Marks</inlineHelpText>
    <label>Total Marks</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>